# Xenon

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  Xenon.sln  xenon_config.toml
.github/: FUNDING.yml  Xenon.desktop  linux-appimage.sh
.github/workflows/: build.yml
Docs/Building/: building-windows.md
Xenon/: Main.cpp  Xe_Main.cpp  Xenon.rc  Xenon.vcxproj  Xenon.vcxproj.filters
Xenon/Base/: Alignment.h  Arch.h  Assert.cpp  Assert.h  BSwap.h  Bounded_threadsafe_queue.h  Concepts.h  Config.cpp  Config.h  Enum.h  Error.cpp  Error.h  Path_util.cpp  Path_util.h  Polyfill_thread.h  String_util.cpp  String_util.h  SystemDevice.h  Thread.cpp  Thread.h  TypeDefs.h  Types.h  Version.h  io_file.cpp  io_file.h  ntapi.cpp  ntapi.h
Xenon/Base/Logging/: Backend.cpp  Backend.h  Filter.cpp  Filter.h  Formatter.h  Log.h  Log_entry.h  Text_formatter.cpp  Text_formatter.h  Types.h
Xenon/Core/: Xe_Main.cpp  Xe_Main.h
Xenon/Core/Bus/: Bus.cpp  Bus.h
Xenon/Core/NAND/: NAND.cpp  NAND.h
Xenon/Core/PCIBridge/: PCIBridge.cpp  PCIBridge.h  PCIDevice.h
Xenon/Core/PCIBridge/CDROM/: CDROM.h
Xenon/Core/PCIBridge/HDD/: HDD.cpp  HDD.h
Xenon/Core/PCIBridge/SFCX/: SFCX.cpp  SFCX.h
Xenon/Core/PCIBridge/SMC/: HANA_State.h  SMC.cpp  SMC.h
Xenon/Core/PCIBridge/XMA/: XMA.cpp  XMA.h
Xenon/Core/PCIBus/: PCIBridge.cpp  PCIBridge.h  PCIBridgeConfig.h  PCIBus.cpp  PCIBus.h  PCIDevice.h
Xenon/Core/PCIBus/CDROM/: CDROM.cpp  CDROM.h
Xenon/Core/PCIBus/HDD/: HDD.cpp  HDD.h
Xenon/Core/PCIBus/SMC/: SMC.cpp  SMC.h
Xenon/Core/PCIBus/XMA/: XMA.cpp  XMA.h
Xenon/Core/PostBus/: PostBus.cpp  PostBus.h
Xenon/Core/RAM/: RAM.cpp  RAM.h
Xenon/Core/RootBus/: RootBus.cpp  RootBus.h
Xenon/Core/RootBus/HostBridge/: HostBridge.cpp  HostBridge.h  PCIe.h
Xenon/Core/RootBus/HostBridge/PCIBridge/: PCIBridge.cpp  PCIBridge.h  PCIBridgeConfig.h  PCIDevice.h  SATA.h
Xenon/Core/RootBus/HostBridge/PCIBridge/AUDIOCTRLLR/: AudioController.cpp  AudioController.h
Xenon/Core/RootBus/HostBridge/PCIBridge/CDROM/: CDROM.cpp  CDROM.h
Xenon/Core/RootBus/HostBridge/PCIBridge/EHCI0/: EHCI0.cpp  EHCI0.h
Xenon/Core/RootBus/HostBridge/PCIBridge/EHCI1/: EHCI1.cpp  EHCI1.h
Xenon/Core/RootBus/HostBridge/PCIBridge/ETHERNET/: Ethernet.cpp  Ethernet.h
Xenon/Core/RootBus/HostBridge/PCIBridge/HDD/: HDD.cpp  HDD.h
Xenon/Core/RootBus/HostBridge/PCIBridge/ODD/: ODD.cpp  ODD.h
Xenon/Core/RootBus/HostBridge/PCIBridge/OHCI0/: OHCI0.cpp  OHCI0.h
Xenon/Core/RootBus/HostBridge/PCIBridge/OHCI1/: OHCI1.cpp  OHCI1.h
Xenon/Core/RootBus/HostBridge/PCIBridge/SFCX/: SFCX.cpp  SFCX.h
Xenon/Core/RootBus/HostBridge/PCIBridge/SMC/: HANA_State.h  SMC.cpp  SMC.h  SMC_Config.h
Xenon/Core/RootBus/HostBridge/PCIBridge/XMA/: XMA.cpp  XMA.h
Xenon/Core/RootBus/HostBridge/XGPU/: GPURegisters.h  XGPU.cpp  XGPU.h  XGPUConfig.h  XenosRegisters.h
Xenon/Core/UART/: UART.cpp  UART.h
Xenon/Core/XCPU/: Bitfield.h  PowerPC.h  XCPU.cpp  XCPU.h  XCPUContext.h  XCPU_SPRs.h  Xenon.cpp  Xenon.h  XenonReservations.cpp  XenonReservations.h  eFuse.h
Xenon/Core/XCPU/IIC/: IIC.cpp  IIC.h
Xenon/Core/XCPU/Interpreter/: Interpreter_ALU.cpp  Interpreter_Helpers.cpp  MMU.cpp  PPCInternal.h  PPCInterpreter.cpp  PPCInterpreter.h  PPCOpcodes.h  PPC_ALU.cpp  PPC_BC.cpp  PPC_FPU.cpp  PPC_Instruction.cpp  PPC_Instruction.h  PPC_LS.cpp  PPC_MMU.cpp  PPC_System.cpp  PowerPCInternal.h  PowerPCState.h  PowerPC_Instruction.cpp  PowerPC_Instruction.h  PowerPC_Load_Store.cpp  PowerPC_ProgramControl.cpp  PowerPC_System.cpp
Xenon/Core/XCPU/PPU/: PPU.cpp  PPU.h  PowerPC.h
Xenon/Core/XCPU/PostBus/: PostBus.cpp  PostBus.h
Xenon/Core/XGPU/: XGPU.cpp  XGPU.h  XGPUConfig.h  XenosRegisters.h
Xenon/Render/: Renderer.cpp  Renderer.h
Xenon/Render/Abstractions/: Texture.h
Xenon/Render/GUI/: GUI.cpp  GUI.h
Xenon/Render/GUI/Implementations/: OpenGL.cpp  OpenGL.h
Xenon/Render/Implementations/: OGLTexture.cpp  OGLTexture.h
Xenon/x64/Debug/: Xenon.exe.recipe
